--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
      left: 0;                                    /* Stay at the left */
      right: 0;                                   /* Stay at the right */
      bottom: 0;                                  /* Stay at the bottom */
-     background-color: rgba(0, 0, 0, 0.9);       /* Black background with opacity */
+     background-color: rgba(0, 0, 0, 0.9);     /* Black background with opacity */
      cursor: pointer;                            /* Add a pointer on hover */
      display: grid;   
-     place-content: center;                              /* Center vertically and horizontally */
+     place-content: center;                      /* Center vertically and horizontally */
     }
 
 .overlay::after {
@@ -25,7 +25,7 @@
        right: 1rem;                              /* 1rem from the right */
        width: 2rem;                              /* 2rem width */
        height: 2rem;                             /* 2rem height */
-       border:solid #fff 2px;                       /* White border of 2px */
+       border:solid #fff 2px;                  overflow-x: ;/* White border of 2px */
        border-radius: 50%;                       /* Rounded border */
     }
     
