--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
        right: 1rem;                              /* 1rem from the right */
        width: 2rem;                              /* 2rem width */
        height: 2rem;                             /* 2rem height */
-       border:solid #fff 2px;                  overflow-x: ;/* White border of 2px */
+       border:solid #fff 2px;                  /* White border of 2px */
        border-radius: 50%;                       /* Rounded border */
     }
     
